# filepath: /Users/howk/KODIAQ Dropbox/Chris Howk/python/pyND/pyproject.toml
[tool.poetry]
name = "pyND"
version = "0.1.3"
description = "Codes used by the Notre Dame CGM group, focused on absorption line studies."
authors = ["Chris Howk <jhowk@nd.edu>"]
license = "GPL"
readme = "README.md"
homepage = "https://github.com/jchowk/pyND"

[tool.poetry.dependencies]
python = ">=3.9"
astropy = ">=5.0"
numpy = ">=1.21.0"
scipy = ">=1.7.0"
linetools = ">=0.3"
matplotlib = ">=3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
